test/errors/undefined_variable.li
import <io>

print(undefined_variable);